# vfs

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp
.devcontainer/: .zshrc  Dockerfile  devcontainer.json
.github/workflows/: test.yaml
include/: vfs.hpp
include/vfs/: directory_entry.hpp  directory_iterator.hpp  fs.hpp  sys.hpp
internal/vfs/impl/: entry.hpp  file.hpp  file_proxy.hpp  fs.hpp  fs_proxy.hpp  mem_file.hpp  mount_point.hpp  os_file.hpp  os_fs.hpp  storage.hpp  sys_fs.hpp  union_file.hpp  utils.hpp  vfile.hpp  vfs.hpp
src/: copy.cpp  entry.cpp  file.cpp  fs.cpp  mem_file.cpp  mem_fs.cpp  mount.cpp  os_file.cpp  os_fs.cpp  sys.cpp  sys_fs.cpp  union_file.cpp  union_fs.cpp  utils.cpp  vfile.cpp  vfs.cpp
tests/: CMakeLists.txt
tests/include/: testing.hpp
tests/include/testing/: utils.hpp
tests/include/testing/suites/: file.hpp  fs.hpp
tests/src/: copy.cpp  directory_entry.cpp  entry.cpp  example.cpp  mem_file.cpp  mem_fs.cpp  mount.cpp  os_file.cpp  os_fs.cpp  read_only_fs.cpp  storage.cpp  sys_fs.cpp  testing.cpp  union_file.cpp  union_fs.cpp  vfile.cpp  vfs.cpp
